force-app/main/default/objects/ppmail__Mail_Content__c.object
<CustomObject>
    <fields>
        <fullName>ppmail__External_Template_ID__c</fullName>
        <label>External Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__HTML_Body__c</fullName>
        <label>HTML Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ppmail__Plain_Body__c</fullName>
        <label>Plain Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__SF_Template_ID__c</fullName>
        <label>SF Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>ppmail__Mail_Content__c</referenceTo>
        <relationshipLabel>Mail Contents (Source For)</relationshipLabel>
        <relationshipName>Mail_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ppmail__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <label>Mail Content</label>
    <listViews>
        <fullName>ppmail__All_Mail_Contents</fullName>
        <columns>NAME</columns>
        <columns>ppmail__Subject__c</columns>
        <columns>ppmail__Template__c</columns>
        <columns>ppmail__Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Mail Contents</label>
    </listViews>
    <nameField>
        <label>Mail Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mail Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>